Archive2/d6/f1ec28c7973d0f/output
main.cpp:9:9: error: cannot initialize a variable of type 'int' with an lvalue of type 'auto'
    int f1 = F<int>; // error: cannot initialize a variable of type 'int' with an lvalue of type 'auto'
        ^    ~~~~~~
1 error generated.
